2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (scroll_to_path),
	(pointer_list_view_select_first), (pointer_list_view_select):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/Muine.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Cleanups. Improve startup sequence. Reduce memory usage. Disable
	first startup window until we've sorted the issue out.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/ActionThread.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Cleanups, fix cover image fetching.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Metadata.cs:

	More cleanups.

2004-02-10  Jorn Baayen  <jbaayen@gnome.org>

	* src/ActionThread.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Backend cleanups.

2004-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Added "de" (German) to ALL_LINGUAS.

2004-02-09  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-08  Vaclav Slavik  <vaclav.slavik@matfyz.cz>

	* libmuine/egg/eggmarshalers.c:

	Define g_value_take_object as g_value_set_object_take_ownership
	when using glib < 2.3.0.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* src/Action.cs:
	* src/ActionThread.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Cleanups. Change labels of add buttons to "Play Song" and "Play Album".

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/gsequence.c: (g_sequence_ptr_is_begin):

	Sync gsequence implementation.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Improve startup mechanism.. and startup speed.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (get_mp3_picture_data):
